force-app/main/default/objects/Alumni__c/Alumni__c.object-meta.xml
<CustomObject>
    <label>Alumni</label>
    <nameField>
        <label>Alumni ID (Text)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>