force-app/main/default/objects/Alumni__c/fields/Annual_Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary_Range__c</fullName>
    <label>Annual Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $30K</fullName>
            </value>
            <value>
                <fullName>$30K - $50K</fullName>
            </value>
            <value>
                <fullName>$50K - $75K</fullName>
            </value>
            <value>
                <fullName>$75K - $100K</fullName>
            </value>
            <value>
                <fullName>$100K - $150K</fullName>
            </value>
            <value>
                <fullName>$150K - $200K</fullName>
            </value>
            <value>
                <fullName>Over $200K</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>