force-app/main/default/objects/Alumni__c/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>University Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>