force-app/main/default/objects/Alumni__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <label>Current Employer</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>