force-app/main/default/objects/Alumni__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <label>Current Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>