force-app/main/default/objects/Alumni__c/fields/Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>Degree_Earned__c</fullName>
    <label>Degree Earned</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>