force-app/main/default/objects/Alumni__c/fields/Geographic_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location__c</fullName>
    <description>Current city, state/country</description>
    <label>Geographic Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>