force-app/main/default/objects/Alumni__c/fields/Graduated_Program__c.field-meta.xml
<CustomField>
    <fullName>Graduated_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Graduated Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Alumni</relationshipLabel>
    <relationshipName>Alumni</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>