force-app/main/default/objects/Alumni__c/fields/Graduation_Dat__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Dat__c</fullName>
    <label>Graduation Dat</label>
    <required>true</required>
    <type>Date</type>
</CustomField>