force-app/main/default/objects/Alumni__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Career Mentoring</fullName>
            </value>
            <value>
                <fullName>Student Recruitment</fullName>
            </value>
            <value>
                <fullName>Guest Speaking</fullName>
            </value>
            <value>
                <fullName>Curriculum Advisory</fullName>
            </value>
            <value>
                <fullName>Industry Connections</fullName>
            </value>
            <value>
                <fullName>Alumni Events</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Volunteer Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>