force-app/main/default/objects/Alumni__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <externalId>true</externalId>
    <label>Student ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>