force-app/main/default/objects/Alumni__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alumni</relationshipLabel>
    <relationshipName>Alumni_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>