force-app/main/default/objects/Alumni__c/fields/Willing_to_Hire__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Hire</label>
    <type>Checkbox</type>
</CustomField>