force-app/main/default/objects/Alumni__c/fields/Willing_to_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Mentor</label>
    <type>Checkbox</type>
</CustomField>