force-app/main/default/objects/Alumni__c/fields/Work_Industry__c.field-meta.xml
<CustomField>
    <fullName>Work_Industry__c</fullName>
    <label>Work Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>