force-app/main/default/objects/Alumni__c/recordTypes/Established_Alumni.recordType-meta.xml
<RecordType>
    <fullName>Established_Alumni</fullName>
    <active>true</active>
    <description>Alumni who graduated more than 5 years ago</description>
    <label>Established Alumni</label>
</RecordType>