force-app/main/default/objects/Alumni__c/recordTypes/Recent_Graduate.recordType-meta.xml
<RecordType>
    <fullName>Recent_Graduate</fullName>
    <active>true</active>
    <description>Alumni who graduated within the last 5 years</description>
    <label>Recent Graduate</label>
</RecordType>